--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.16.13",
     "axios": "^0.24.0",
     "emailjs-com": "^3.2.0",
+    "netlify-cli": "^8.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -26,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
